--- a/lib/brandaid/views/brand.slim
+++ b/lib/brandaid/views/brand.slim
@@ -2,7 +2,9 @@ doctype html
 html
   head
     title Hello
+    link rel="stylesheet" href="/brandaid.css" 
   body
+    input#styles type="hidden" value="#{JSON.dump @brand['styles']}"
     form#styleEditor action=url("#{@brand["name"]}/") method="post"
       p
         input#styleName name="file" value="default"
