--- a/lib/brandaid/views/brand.slim
+++ b/lib/brandaid/views/brand.slim
@@ -5,6 +5,7 @@ html
     link rel="stylesheet" href="/brandaid.css" 
   body
     input#styles type="hidden" value="#{JSON.dump @brand['styles']}"
+    pre#stylesheet
     form#styleEditor action=url("#{@brand["name"]}/") method="post"
       p
         input#styleName name="file" value="default"
@@ -18,5 +19,6 @@ html
         textarea name="body"
       p
         input type="submit"
-    script src="/js/bower_components/jquery/dist/jquery.min.js" data-main="/js/app.js"
+    script src="/js/bower_components/underscore/underscore.js"
+    script src="/js/bower_components/jquery/dist/jquery.min.js"
     script src="/js/bower_components/requirejs/require.js" data-main="/js/app.js"
