--- a/lib/brandaid/views/login.slim
+++ b/lib/brandaid/views/login.slim
@@ -3,6 +3,8 @@ html
   head
     title Login
   body
+    form method='post' action=url('logout')
+      input type='submit' value='Logout'
     form method='post'
       div 
         = "Username: "
