--- a/lib/brandaid/views/login.slim
+++ b/lib/brandaid/views/login.slim
@@ -11,5 +11,5 @@ html
         input type='text' name="user"
       div
         = "Password: "
-        input type='text' name="pass"
+        input type='password' name="pass"
       input type="submit"
