--- a/lib/brandaid/views/brand.slim
+++ b/lib/brandaid/views/brand.slim
@@ -1,23 +1,21 @@
-doctype html
-html
-  head
-    title Hello
-    link rel="stylesheet" href="/brandaid.css" 
-  body
-    input#styles type="hidden" value="#{JSON.dump @brand['styles']}"
-    input#appRoot type="hidden" value=url
-    pre#stylesheet
-    form#styleEditor action=url("#{@brand["name"]}/") method="post"
-      p
-        input#styleName name="file" value="default"
-      p#jsonEditor
-      p
-        input type="submit"
-    form#parseCson method="post" action=url("#{@brand['name']}/to/cson")
-      p
-        textarea name="body"
-      p
-        input type="submit"
-    script src="/js/bower_components/underscore/underscore.js"
-    script src="/js/bower_components/jquery/dist/jquery.min.js"
-    script src="/js/bower_components/requirejs/require.js" data-main="/js/app.js"
+- @footer, @main = :footer, "/js/app.js"
+input#styles type="hidden" value="#{JSON.dump @brand['styles']}"
+input#appRoot type="hidden" value=url
+input#brandName type="hidden" value=@brand['name']
+pre#stylesheet
+form
+  input name="style"
+  input type="submit"
+form#styleEditor action=url("#{@brand["name"]}/") method="post"
+  p
+    input#styleName name="file" value=@style
+  input#jsonBody type="hidden" name="body"
+  p#jsonEditor
+  p
+    input type="submit" value="Save"
+button#changeStyle Change Style
+form#parseCson method="post" action=url("#{@brand['name']}/to/cson")
+  p
+    textarea name="body"
+  p
+    input type="submit"
