--- a/lib/brandaid/views/footer.slim
+++ b/lib/brandaid/views/footer.slim
@@ -1,7 +1,8 @@
 script src="/js/bower_components/underscore/underscore.js"
 script src="/js/bower_components/jquery/dist/jquery.min.js"
 script src="/js/bower_components/jsoneditor/jsoneditor-min.js"
-script src="/js/eval.js"
-script src="/js/buckUnder.js"
-script src="/js/cssconv.js"
-script src="/js/app.js"
+script src="/js/buckUnder.js.min.js"
+script src="/js/cssconv.js.min.js"
+script src="/js/bower_components/coffee-script/extras/coffee-script.js"
+script src="/js/eval.js.min.js"
+script src="/js/app.js.min.js"
