--- a/lib/brandaid/views/brand.slim
+++ b/lib/brandaid/views/brand.slim
@@ -1,4 +1,4 @@
-- @footer, @main = :footer, "/js/app.js"
+- @footer = :footer
 input#styles type="hidden" value="#{JSON.dump @brand['styles']}"
 input#appRoot type="hidden" value=url
 input#brandName type="hidden" value=@brand['name']
