--- a/lib/brandaid/views/footer.slim
+++ b/lib/brandaid/views/footer.slim
@@ -1,3 +1,3 @@
 script src="/js/bower_components/coffee-script/extras/coffee-script.js"
-script src="/jam/require.js"
+script src="/jam/require.js" data-main="/"
 script src="/js/app.js.min.js"
