--- a/lib/brandaid/public/lmr/stylesheet.css
+++ b/lib/brandaid/public/lmr/stylesheet.css
@@ -1,49 +1,12 @@
 @font-face {
-    font-family: 'lmr10';
-    src: url('lmroman10-bold-webfont.eot');
-    src: url('lmroman10-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lmroman10-bold-webfont.woff') format('woff'),
-         url('lmroman10-bold-webfont.ttf') format('truetype'),
-         url('lmroman10-bold-webfont.svg#latin_modern_roman10_bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'lmr10';
-    src: url('lmroman10-regular-webfont.eot');
-    src: url('lmroman10-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lmroman10-regular-webfont.woff') format('woff'),
-         url('lmroman10-regular-webfont.ttf') format('truetype'),
-         url('lmroman10-regular-webfont.svg#latin_modern_roman10_regular') format('svg');
+    font-family: 'latin_modern_roman10BdIt';
+    src: url('lmroman10-bolditalic-webfont.eot');
+    src: url('lmroman10-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('lmroman10-bolditalic-webfont.woff') format('woff'),
+         url('lmroman10-bolditalic-webfont.ttf') format('truetype'),
+         url('lmroman10-bolditalic-webfont.svg#latin_modern_roman10BdIt') format('svg');
     font-weight: normal;
     font-style: normal;
-
-}
-
-
-@font-face {
-    font-family: 'lmr10';
-    src: url('lmromanslant10-bold-webfont.eot');
-    src: url('lmromanslant10-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lmromanslant10-bold-webfont.woff') format('woff'),
-         url('lmromanslant10-bold-webfont.ttf') format('truetype'),
-         url('lmromanslant10-bold-webfont.svg#latin_modern_roman_slante10Bd') format('svg');
-    font-weight: bold;
-    font-style: italic;
-
-}
-
-@font-face {
-    font-family: 'lmr10';
-    src: url('lmromanslant10-regular-webfont.eot');
-    src: url('lmromanslant10-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('lmromanslant10-regular-webfont.woff') format('woff'),
-         url('lmromanslant10-regular-webfont.ttf') format('truetype'),
-         url('lmromanslant10-regular-webfont.svg#latin_modern_roman_slante10Rg') format('svg');
-    font-weight: normal;
-    font-style: italic;
 
 }
 
