--- a/lib/brandaid/views/brand.slim
+++ b/lib/brandaid/views/brand.slim
@@ -11,7 +11,7 @@ form
       td Style Name
       td
         input name="style"
-  input type="submit"
+  input type="submit" value="Load Style"
 form#styleEditor action=url("#{@brand["name"]}/") method="post"
   input#jsonBody type="hidden" name="body"
   table
@@ -37,8 +37,15 @@ form#parseCson method="post" action=url("#{@brand['name']}/to/cson")
       textarea name="body"
   input type="submit"
 form#editScript action=url("#{@brand['name']}/js") method="post"
-  input name="file"
-  textarea#macro cols=80 rows=25 name="body"
+  table
+    tr
+      td File Name
+      td
+        input name="file"
+    tr
+      td Macro Body
+      td
+        textarea#macro cols=80 rows=25 name="body"
   input type="submit"
 form#loadScript
   input.file
