--- a/lib/brandaid/views/brand_rules.slim
+++ b/lib/brandaid/views/brand_rules.slim
@@ -1,2 +1,3 @@
 - @header = :header
-== BrandAid::Page.call(@brand["styles"]["default"])
+div#brandRules
+  == BrandAid::Page.call(@brand["styles"]["default"])
