--- a/lib/doc/brandaid/views/brand_rules_slim~.html
+++ b/lib/doc/brandaid/views/brand_rules_slim~.html
@@ -4,21 +4,21 @@
 <head>
 <meta charset="UTF-8">
 
-<title>002-ruby.t - RDoc Documentation</title>
+<title>brand_rules.slim~ - RDoc Documentation</title>
 
-<link href="../fonts.css" rel="stylesheet">
-<link href="../rdoc.css" rel="stylesheet">
+<link href="../../fonts.css" rel="stylesheet">
+<link href="../../rdoc.css" rel="stylesheet">
 
 <script type="text/javascript">
-  var rdoc_rel_prefix = "../";
+  var rdoc_rel_prefix = "../../";
 </script>
 
-<script src="../js/jquery.js"></script>
-<script src="../js/navigation.js"></script>
-<script src="../js/search_index.js"></script>
-<script src="../js/search.js"></script>
-<script src="../js/searcher.js"></script>
-<script src="../js/darkfish.js"></script>
+<script src="../../js/jquery.js"></script>
+<script src="../../js/navigation.js"></script>
+<script src="../../js/search_index.js"></script>
+<script src="../../js/search.js"></script>
+<script src="../../js/searcher.js"></script>
+<script src="../../js/darkfish.js"></script>
 
 
 <body id="top" role="document" class="file">
@@ -26,13 +26,13 @@
   <div id="project-navigation">
     <div id="home-section" role="region" title="Quick navigation" class="nav-section">
   <h2>
-    <a href="../index.html" rel="home">Home</a>
+    <a href="../../index.html" rel="home">Home</a>
   </h2>
 
   <div id="table-of-contents-navigation">
-    <a href="../table_of_contents.html#pages">Pages</a>
-    <a href="../table_of_contents.html#classes">Classes</a>
-    <a href="../table_of_contents.html#methods">Methods</a>
+    <a href="../../table_of_contents.html#pages">Pages</a>
+    <a href="../../table_of_contents.html#classes">Classes</a>
+    <a href="../../table_of_contents.html#methods">Methods</a>
   </div>
 </div>
 
@@ -61,21 +61,27 @@
 
   <ul class="link-list">
   
-    <li><a href="../Gemfile.html">Gemfile</a>
+    <li><a href="../../brandaid/css_output.html">css.output</a>
   
-    <li><a href="../Gemfile_lock.html">Gemfile.lock</a>
+    <li><a href="../../brandaid/views/brand_slim.html">brand.slim</a>
   
-    <li><a href="../Procfile.html">Procfile</a>
+    <li><a href="../../brandaid/views/brand_rules_slim.html">brand_rules.slim</a>
   
-    <li><a href="../Rakefile.html">Rakefile</a>
+    <li><a href="../../brandaid/views/brand_rules_slim~.html">brand_rules.slim~</a>
   
-    <li><a href="../config_ru.html">config.ru</a>
+    <li><a href="../../brandaid/views/footer_slim.html">footer.slim</a>
   
-    <li><a href="../lib/brandaid/css_output.html">css.output</a>
+    <li><a href="../../brandaid/views/header_slim.html">header.slim</a>
   
-    <li><a href="../t/001-ruby_t.html">001-ruby.t</a>
+    <li><a href="../../brandaid/views/header_slim~.html">header.slim~</a>
   
-    <li><a href="../t/002-ruby_t.html">002-ruby.t</a>
+    <li><a href="../../brandaid/views/index_slim.html">index.slim</a>
+  
+    <li><a href="../../brandaid/views/layout_slim.html">layout.slim</a>
+  
+    <li><a href="../../brandaid/views/login_slim.html">login.slim</a>
+  
+    <li><a href="../../brandaid/views/signup_slim.html">signup.slim</a>
   
   </ul>
 </div>
@@ -83,9 +89,7 @@
   </div>
 </nav>
 
-<main role="main" aria-label="Page t/002-ruby.t">
-
-<p>#!/usr/bin/env bash ./test/runner test/002-*.rb | tapout tap</p>
+<main role="main" aria-label="Page brandaid/views/brand_rules.slim~">
 </main>
 
 
